ISPN-11339 adding details about remote clients (from master)

--- a/documentation/asciidoc/stories/assembly_adjusting_pod_resources.adoc
+++ b/documentation/asciidoc/stories/assembly_adjusting_pod_resources.adoc
@@ -1,6 +1,6 @@
 [id='container_resources']
 :context: pods
-= Configuring {brandname} Pod Resources
+= Configuring Pod Resources
 You can allocate CPU and memory resources, specify JVM options, and configure
 storage for {brandname} pods.
 
