--- a/documentation/asciidoc/topics/cmd_examples/oc_get_secret_creds_jp.adoc
+++ b/documentation/asciidoc/topics/cmd_examples/oc_get_secret_creds_jp.adoc
@@ -1,5 +1,5 @@
-$ {oc_get_secret} {example_crd_name}-generated-secret -n my_namespace \
--o jsonpath="{.data.identities\.yaml}" | base64 -D
+$ {oc_get_secret} {example_crd_name}-generated-secret \
+-o jsonpath="{.data.identities\.yaml}" | base64 --decode
 
 credentials:
 - username: developer
