--- a/documentation/asciidoc/topics/cmd_examples/oc_get_secret_tls.adoc
+++ b/documentation/asciidoc/topics/cmd_examples/oc_get_secret_tls.adoc
@@ -1,2 +1,2 @@
-$ {oc_get_secret} tls-secret -o jsonpath='{.data.tls\.crt}' |  \
-base64 -d > tls.crt
+$ {oc_get_secret} {example_crd_name}-cert-secret \
+-o jsonpath='{.data.tls\.crt}' | base64 -d > tls.crt
