--- a/documentation/asciidoc/topics/proc_deploy_operator.adoc
+++ b/documentation/asciidoc/topics/proc_deploy_operator.adoc
@@ -1,6 +1,7 @@
 [id='installing_operator-{context}']
-= Deploying the {ispn_operator}
-Manually deploying the {ispn_operator} to {k8s} involves applying the `yaml` template that defines metadata and container specifications.
+= Deploying {ispn_operator}
+Manually deploying {ispn_operator} to {k8s} involves applying the `yaml`
+template that defines metadata and container specifications.
 
 .Procedure
 
