--- a/documentation/asciidoc/topics/proc_encrypting_endpoints_tls_secret.adoc
+++ b/documentation/asciidoc/topics/proc_encrypting_endpoints_tls_secret.adoc
@@ -1,19 +1,25 @@
 [id='using_custom_tls-{context}']
-= Adding TLS Certificates to Encryption Secrets
-Add a PKCS12 keystore or TLS certificate/key pair to a secret and configure
-{brandname} to use it for endpoint encryption.
+= Using Custom TLS Certificates
+Use custom PKCS12 keystore or TLS certificate/key pairs to encrypt connections
+between clients and {brandname} clusters.
+
+.Prerequisites
+
+Create a custom resource definition for either a keystore or certificate secret. See:
+
+* link:#ref_tls_cert_secret-security[Certificate Secrets]
+* link:#ref_tls_keystore_secret-security[Keystore Secrets]
 
 .Procedure
 
-. Create an encryption secret.
-. Add the encryption secret to your {openshiftshort} namespace.
+. Add the encryption secret to your {openshiftshort} namespace, for example:
 +
 [source,options="nowrap",subs=attributes+]
 ----
 $ {oc_apply_cr} tls_secret.yaml
 ----
 +
-. Define a custom resource for the encryption secret.
+. Modify your custom resource definition to include the encryption secret and then apply the changes.
 +
 [source,options="nowrap",subs=attributes+]
 ----
@@ -23,11 +29,3 @@ include::yaml_annotated/cr_tls_secret.yaml[]
 <1> encrypts traffic to and from {brandname} endpoints.
 <2> configures {brandname} to use secrets that contain encryption certificates.
 <3> names the encryption secret.
-+
-. Apply the custom resource with `{oc_apply_cr}`.
-. Use `{oc_get_pods_w}` to watch the {ispn_operator} apply the custom resources.
-
-.Reference
-
-* link:#ref_tls_cert_secret-security[Certificate Secret]
-* link:#ref_tls_keystore_secret-security[Keystore Secret]
