--- a/documentation/asciidoc/topics/proc_get_cluster_credentials.adoc
+++ b/documentation/asciidoc/topics/proc_get_cluster_credentials.adoc
@@ -1,22 +1,17 @@
 [id='getting_credentials-{context}']
 = Retrieving Credentials
-Get base64-encoded credentials from the authentication secret.
-
-Default credentials::
-`{example_crd_name}-generated-secret` is the default authentication secret. +
-`developer` is the default application user. +
-`operator` is an internal user that interacts with {brandname} clusters.
+Get credentials from authentication secrets to access {brandname} clusters.
 
 .Procedure
 
-* Retrieve credentials from the default authentication secret as follows:
+* Retrieve credentials from authentication secrets, as in the following example:
 +
 [source,options="nowrap",subs=attributes+]
 ----
 include::cmd_examples/oc_get_secret_creds.adoc[]
 ----
 +
-Do the following to base64 decode credentials:
+Base64-decode credentials.
 +
 [source,options="nowrap",subs=attributes+]
 ----
