--- a/documentation/asciidoc/topics/ref_crd.adoc
+++ b/documentation/asciidoc/topics/ref_crd.adoc
@@ -1,6 +1,6 @@
 [id='minimal_crd-{context}']
 = {brandname} Custom Resources
-The {ispn_operator} adds a resource type and custom resource definition (CRD)
+{ispn_operator} adds a resource type and custom resource definition (CRD)
 with recommended defaults for {brandname} pods.
 
 You configure {brandname} pods dynamically by changing defaults and adding
@@ -14,7 +14,7 @@ include::yaml_annotated/cr_minimal.yaml[]
 ----
 
 <1> declares the version.
-<2> sets the resource type that the {ispn_operator} uses to handle the lifecycle of {brandname} clusters.
+<2> sets the resource type that ispn_operator} uses to handle the lifecycle of {brandname} clusters.
 <3> names the {brandname} cluster.
 <4> sets the number of pods in the {brandname} cluster.
 
