--- a/documentation/asciidoc/topics/ref_secret_auth.adoc
+++ b/documentation/asciidoc/topics/ref_secret_auth.adoc
@@ -1,5 +1,5 @@
 [id='ref_auth_secret-{context}']
-= Credentials Secrets
+= Authentication Secrets
 
 [source,options="nowrap",subs=attributes+]
 ----
@@ -13,9 +13,6 @@ include::yaml_annotated/secret_connect.yaml[]
 
 [IMPORTANT]
 ====
-* You must include the `operator` user and specify a password. The {ispn_operator}
+You must include the `operator` user and specify a password. {ispn_operator}
 requires these credentials to interact with {brandname} clusters.
-
-* Do not use example passwords from this documentation. You should always replace
-example credentials with ones that conform to the relevant security guidelines.
 ====
