--- a/documentation/asciidoc/stories/assembly_configuring_authentication.adoc
+++ b/documentation/asciidoc/stories/assembly_configuring_authentication.adoc
@@ -1,11 +1,10 @@
 [id='managing_cluster_credentials']
 :context: auth
 = Configuring Authentication
-Application users must authenticate with {brandname} pods to access data.
+Application users must authenticate with {brandname} clusters. {ispn_operator}
+generates default credentials or you can add your own.
 
-The {ispn_operator} generates default credentials and stores them in secrets.
-You can use the default credentials or add custom authentication secrets.
-
+include::{topics}/ref_default_credentials.adoc[leveloffset=+1]
 include::{topics}/proc_get_cluster_credentials.adoc[leveloffset=+1]
 include::{topics}/proc_create_cluster_auth.adoc[leveloffset=+1]
 include::{topics}/ref_secret_auth.adoc[leveloffset=+2]
