--- a/documentation/asciidoc/stories/assembly_reference.adoc
+++ b/documentation/asciidoc/stories/assembly_reference.adoc
@@ -2,7 +2,8 @@
 :context: reference
 = Reference
 
-Find useful information for {brandname} clusters that you create with the {ispn_operator}.
+Find useful information for {brandname} clusters that you create with
+{ispn_operator}.
 
 include::{topics}/ref_services.adoc[leveloffset=+1]
 include::{topics}/ref_upgrades.adoc[leveloffset=+1]
