--- a/documentation/asciidoc/topics/proc_creating_minikube_site_secrets.adoc
+++ b/documentation/asciidoc/topics/proc_creating_minikube_site_secrets.adoc
@@ -1,6 +1,6 @@
 [id='creating_minikube_secrets-{context}']
 = Creating Minikube Site Access Secrets
-If you run the {ispn_operator} in Minikube, you should create secrets that
+If you run {ispn_operator} in Minikube, you should create secrets that
 contain the files that allow different instances of Minikube to authenticate
 with each other.
 
