--- a/documentation/asciidoc/topics/proc_install_crd_rbac.adoc
+++ b/documentation/asciidoc/topics/proc_install_crd_rbac.adoc
@@ -1,6 +1,7 @@
 [id='installing_crd_rbac-{context}']
 = Creating {ispn_operator} Resources
-Add the custom resource definition and role-based access control (RBAC) resources for the {ispn_operator}.
+Add the custom resource definition and role-based access control (RBAC)
+resources for {ispn_operator}.
 
 .Procedure
 
